src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C413_C413.py.snap
---
source: src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryCallAroundSorted: list
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 15
  fix:
    content: sorted(x)
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 15
  parent: ~
- kind:
    UnnecessaryCallAroundSorted: reversed
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix:
    content: "sorted(x, reverse=True)"
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 19
  parent: ~
- kind:
    UnnecessaryCallAroundSorted: reversed
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 36
  fix:
    content: "sorted(x, key=lambda e: e, reverse=True)"
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 36
  parent: ~
- kind:
    UnnecessaryCallAroundSorted: reversed
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 33
  fix:
    content: "sorted(x, reverse=True)"
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 33
  parent: ~

